package com.frostwizard4.Neutrino.Items;

import net.minecraft.item.Item;

public class EmptyStaff extends Item {
    public EmptyStaff(Settings settings) {
        super(settings);
    }
}
