package com.frostwizard4.Neutrino.Items;

import net.minecraft.item.Item;

public class WoodApple extends Item {
    public WoodApple(Settings settings) {
        super(settings);
    }
}