package com.frostwizard4.Neutrino.items;

import net.minecraft.item.Item;

public class DiamondApple extends Item {
    public DiamondApple(Settings settings) {
        super(settings);
    }
}