package com.frostwizard4.Neutrino.items;

import net.minecraft.item.Item;

public class DiamondCarrot extends Item {
    public DiamondCarrot(Settings settings) {
        super(settings);
    }
}