@startuml

title __ITEMS's Class Diagram__\n

  namespace com.frostwizard4.Neutrino {
    namespace items {
      class com.frostwizard4.Neutrino.items.DaturaEssence {
          + DaturaEssence()
          + hasGlint()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace items {
      class com.frostwizard4.Neutrino.items.DiamondApple {
          + DiamondApple()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace items {
      class com.frostwizard4.Neutrino.items.DiamondCarrot {
          + DiamondCarrot()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace items {
      class com.frostwizard4.Neutrino.items.EmptyStaff {
          + EmptyStaff()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace items {
      class com.frostwizard4.Neutrino.items.EnchantedDiamondApple {
          + EnchantedDiamondApple()
          + hasGlint()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace items {
      class com.frostwizard4.Neutrino.items.EvokersStaff {
          + EvokersStaff()
          + appendTooltip()
          + use()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace items {
      class com.frostwizard4.Neutrino.items.GoatHorn {
          + GoatHorn()
          + use()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace items {
      class com.frostwizard4.Neutrino.items.RustySwordMaterial {
          {static} + INSTANCE : RustySwordMaterial
          + getAttackDamage()
          + getDurability()
          + getEnchantability()
          + getMiningLevel()
          + getMiningSpeedMultiplier()
          + getRepairIngredient()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace items {
      class com.frostwizard4.Neutrino.items.ShatteredSwordMaterial {
          {static} + INSTANCE : ShatteredSwordMaterial
          + getAttackDamage()
          + getDurability()
          + getEnchantability()
          + getMiningLevel()
          + getMiningSpeedMultiplier()
          + getRepairIngredient()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace items {
      class com.frostwizard4.Neutrino.items.VampiricStaff {
          + VampiricStaff()
          + appendTooltip()
          + postHit()
      }
    }
  }
  

  namespace com.frostwizard4.Neutrino {
    namespace items {
      class com.frostwizard4.Neutrino.items.WoodApple {
          + WoodApple()
      }
    }
  }
  

  com.frostwizard4.Neutrino.items.DaturaEssence -up-|> net.minecraft.item.Item
  com.frostwizard4.Neutrino.items.DiamondApple -up-|> net.minecraft.item.Item
  com.frostwizard4.Neutrino.items.DiamondCarrot -up-|> net.minecraft.item.Item
  com.frostwizard4.Neutrino.items.EmptyStaff -up-|> net.minecraft.item.Item
  com.frostwizard4.Neutrino.items.EnchantedDiamondApple -up-|> net.minecraft.item.Item
  com.frostwizard4.Neutrino.items.EvokersStaff -up-|> net.minecraft.item.Item
  com.frostwizard4.Neutrino.items.GoatHorn -up-|> net.minecraft.item.Item
  com.frostwizard4.Neutrino.items.RustySwordMaterial .up.|> net.minecraft.item.ToolMaterial
  com.frostwizard4.Neutrino.items.ShatteredSwordMaterial .up.|> net.minecraft.item.ToolMaterial
  com.frostwizard4.Neutrino.items.VampiricStaff -up-|> net.minecraft.item.SwordItem
  com.frostwizard4.Neutrino.items.WoodApple -up-|> net.minecraft.item.Item


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
